[tool.poetry]
name = "pdf-merger"
version = "0.1.0"
description = "Merge multiple PDFs into one file via CLI"
authors = ["Pushkar <you@example.com>"]
packages = [{ include = "pdf_merger" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
PyPDF4 = "^1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
