[tool.poetry]
name = "reminder"
version = "0.1.0"
description = "CLI-based reminder with snooze and repeat"
authors = ["Pushkar <you@example.com>"]
packages = [{ include = "reminder" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pyttsx3 = "^2.90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
